Agregue el ejercicio JSON pero no lo termine

--- a/Ejercicio6/nombre.html
+++ b/Ejercicio6/nombre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="guardar.php" method="POST">
-     <p>ingrese un nombre <input type="text" name="nombre"></p>
+     <p>Ingrese un nombre <input type="text" name="nombre"></p>
         <input type="submit" />  
         </form>
     <style>
